fix z-index on grow inc

--- a/Styles/growinc.css
+++ b/Styles/growinc.css
@@ -14,7 +14,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 1;
 }
 
 .drop {
@@ -102,10 +102,12 @@
   user-select: none;
   display: flex;
   align-items: flex-end;
+  z-index: 2;
 }
 
 #growinc-logo {
   width: 70%;
+  z-index: 2;
 }
 
 #growinc-cta {
@@ -114,6 +116,7 @@
   box-shadow: 10px 10px black, 10px 10px 15px #21242ec7, 0 0 15px #21242ec7;
   transition: 0.3s ease-in-out;
   object-fit: cover;
+  z-index: 2;
 }
 
 #growinc-cta:hover {
@@ -135,6 +138,7 @@
   padding: 15px 25px;
   backdrop-filter: blur(3px);
   font-family: Minecraft;
+  z-index: 2;
 }
 
 #growinc-quote {
